--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <nav class="navegacion">
         <a class="navegacion__enlace navegacion__enlace--activo" href="../frontendStore/index.html">Tienda</a>
-        <a class="navegacion__enlace" href="../frontendStore/nosotros.html">Nosotros</a>
+        <a class="navegacion__enlace" href="../nosotros.html">Nosotros</a>
     </nav>
     <main class="contenedor">
         <h1>Nuestros Productos</h1>
