--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrontEnd Store</title>
-    <link rel="stylesheet" href="../frontendStore/css/normalize.css">
+    <link rel="stylesheet" href="..//css/normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" media="screen">
@@ -13,13 +13,13 @@
 
 <body>
     <header class="header">
-        <a href="../frontendStore/index.html">
+        <a href="..//index.html">
             <img class="header__logo" src="img/logo.png" alt="Logotipo">
         </a>
     </header>
     <nav class="navegacion">
-        <a class="navegacion__enlace" href="../frontendStore/index.html">Tienda</a>
-        <a class="navegacion__enlace navegacion__enlace--activo" href="../frontendStore/nosotros.html">Nosotros</a>
+        <a class="navegacion__enlace" href="..//index.html">Tienda</a>
+        <a class="navegacion__enlace navegacion__enlace--activo" href="..//nosotros.html">Nosotros</a>
     </nav>
     <main class="contenedor">
         <h1>Nosotros</h1>
