--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="grid">
             <div class="Producto">
-                <a href="..producto.html">
+                <a href="..//producto.html">
                     <img class="producto__imagen" src="img/1.jpg" alt="imagen camisa">
                     <div class="producto__informacion">
                         <p class="producto__nombre">VueJS</p>
