--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrontEnd Store</title>
-    <link rel="stylesheet" href="..//css/normalize.css">
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" media="screen">
@@ -13,12 +13,12 @@
 
 <body>
     <header class="header">
-        <a href="..//index.html">
+        <a href="../index.html">
             <img class="header__logo" src="img/logo.png" alt="Logotipo">
         </a>
     </header>
     <nav class="navegacion">
-        <a class="navegacion__enlace navegacion__enlace--activo" href="..//index.html">Tienda</a>
+        <a class="navegacion__enlace navegacion__enlace--activo" href="../index.html">Tienda</a>
         <a class="navegacion__enlace" href="../nosotros.html">Nosotros</a>
     </nav>
     <main class="contenedor">
@@ -26,7 +26,7 @@
 
         <div class="grid">
             <div class="Producto">
-                <a href="..//producto.html">
+                <a href="../producto.html">
                     <img class="producto__imagen" src="img/1.jpg" alt="imagen camisa">
                     <div class="producto__informacion">
                         <p class="producto__nombre">VueJS</p>
@@ -36,7 +36,7 @@
             </div>
             <!--.producto-->
             <div class="Producto">
-                <a href="..//producto.html">
+                <a href="../producto.html">
                     <img class="producto__imagen" src="img/2.jpg" alt="imagen camisa">
                     <div class="producto__informacion">
                         <p class="producto__nombre">AngularJS</p>
@@ -46,7 +46,7 @@
             </div>
             <!--.producto-->
             <div class="Producto">
-                <a href="..//producto.html">
+                <a href="../producto.html">
                     <img class="producto__imagen" src="img/3.jpg" alt="imagen camisa">
                     <div class="producto__informacion">
                         <p class="producto__nombre">ReactJS</p>
@@ -56,7 +56,7 @@
             </div>
             <!--.producto-->
             <div class="Producto">
-                <a href="..//producto.html">
+                <a href="../producto.html">
                 <img class="producto__imagen" src="img/4.jpg" alt="imagen camisa">
                 <div class="producto__informacion">
                     <p class="producto__nombre">Redux</p>
@@ -65,7 +65,7 @@
                 </a>
             </div> <!--.producto-->
             <div class="Producto">
-                <a href="..//producto.html">
+                <a href="../producto.html">
                 <img class="producto__imagen" src="img/5.jpg" alt="imagen camisa">
                 <div class="producto__informacion">
                     <p class="producto__nombre">Node.js</p>
@@ -74,7 +74,7 @@
                 </a>
             </div> <!--.producto-->
             <div class="Producto">
-                <a href="..//producto.html">
+                <a href="../producto.html">
                 <img class="producto__imagen" src="img/6.jpg" alt="imagen camisa">
                 <div class="producto__informacion">
                     <p class="producto__nombre">SASS</p>
@@ -83,7 +83,7 @@
                 </a>
             </div> <!--.producto-->
             <div class="Producto">
-                <a href="..//producto.html">
+                <a href="../producto.html">
                 <img class="producto__imagen" src="img/7.jpg" alt="imagen camisa">
                 <div class="producto__informacion">
                     <p class="producto__nombre">HTML5</p>
@@ -92,7 +92,7 @@
                 </a>
             </div> <!--.producto-->
             <div class="Producto">
-                <a href="..//producto.html">
+                <a href="../producto.html">
                 <img class="producto__imagen" src="img/8.jpg" alt="imagen camisa">
                 <div class="producto__informacion">
                     <p class="producto__nombre">Github</p>
@@ -101,7 +101,7 @@
                 </a>
             </div> <!--.producto-->
             <div class="Producto">
-                <a href="..//producto.html">
+                <a href="../producto.html">
                 <img class="producto__imagen" src="img/9.jpg" alt="imagen camisa">
                 <div class="producto__informacion">
                     <p class="producto__nombre">BulmaCSS</p>
@@ -110,7 +110,7 @@
                 </a>
             </div> <!--.producto-->
             <div class="Producto">
-                <a href="..//producto.html">
+                <a href="../producto.html">
                 <img class="producto__imagen" src="img/10.jpg" alt="imagen camisa">
                 <div class="producto__informacion">
                     <p class="producto__nombre">TypeScript</p>
@@ -119,7 +119,7 @@
                 </a>
             </div> <!--.producto-->
             <div class="Producto">
-                <a href="..//producto.html">
+                <a href="../producto.html">
                 <img class="producto__imagen" src="img/11.jpg" alt="imagen camisa">
                 <div class="producto__informacion">
                     <p class="producto__nombre">Drupal</p>
@@ -128,7 +128,7 @@
                 </a>
             </div> <!--.producto-->
             <div class="Producto">
-                <a href="..//producto.html">
+                <a href="../producto.html">
                 <img class="producto__imagen" src="img/12.jpg" alt="imagen camisa">
                 <div class="producto__informacion">
                     <p class="producto__nombre">JavaScript</p>
@@ -137,7 +137,7 @@
                 </a>
             </div> <!--.producto-->
             <div class="Producto">
-                <a href="..//producto.html">
+                <a href="../producto.html">
                 <img class="producto__imagen" src="img/13.jpg" alt="imagen camisa">
                 <div class="producto__informacion">
                     <p class="producto__nombre">GraphQL</p>
@@ -146,7 +146,7 @@
                 </a>
             </div> <!--.producto-->
             <div class="Producto">
-                <a href="..//producto.html">
+                <a href="../producto.html">
                 <img class="producto__imagen" src="img/14.jpg" alt="imagen camisa">
                 <div class="producto__informacion">
                     <p class="producto__nombre">WordPress</p>
